--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "react-dom": "^16.7.0",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
-  },
-  "devDependencies": {
+    "react-scripts": "2.1.3",
     "bulma": "^0.7.2",
-    "node-sass": "^4.8.3"
+    "node-sass": "^4.11.0"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
