--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "jquery": "^3.3.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-responsive": "^6.0.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "bulma": "^0.7.2",
-    "node-sass": "^4.11.0"
-  },
-  "devDependencies": {},
+  "name": "portfolio-app",
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postinstall": "npm run css-build",
-    "test": "react-scripts test",
-    "css-build": "node-sass --omit-source-map-url src/sass/mystyles.scss src/css/mystyles.css",
-    "css-watch": "npm run css-build -- --watch"
+    "client": "cd client && npm start",
+    "server": "cd server && npm start",
+    "start": "npm-run-all --parallel server client",
+    "heroku-postbuild": "npm run build-server && npm run build-client",
+    "build-server": "cd server && npm install",
+    "build-client": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "nodeman": "^1.1.2",
+    "npm-run-all": "^4.1.5"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "concurrently": "^4.1.0"
+  }
 }
