--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm-run-all --parallel server client",
     "heroku-postbuild": "npm run build-server && npm run build-client",
     "build-server": "cd server && npm install",
-    "build-client": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "build-client": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "nodeman": "^1.1.2",
