modify scripts for heroku

--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "heroku-postbuild": "npm run css-build",
+    "build": "npm run css-build & react-scripts build",
     "test": "react-scripts test",
     "css-build": "node-sass --omit-source-map-url src/sass/mystyles.scss src/css/mystyles.css",
     "css-watch": "npm run css-build -- --watch"
