--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "portfolio-app",
   "version": "1.0.0",
   "scripts": {
+    "postinstall": "npm run install-server && npm run install-client",
+    "start": "npm-run-all --parallel server client",
+    "build": "cd client && npm run build",
     "client": "cd client && npm start",
     "server": "cd server && npm start",
-    "start": "npm-run-all --parallel server client",
-    "heroku-postbuild": "npm run build-server && npm run build-client",
-    "build-server": "cd server && npm install",
-    "build-client": "cd client && npm install && npm run build"
+    "install-server": "cd server && npm install",
+    "install-client": "cd client && npm install"
   },
   "dependencies": {
     "nodeman": "^1.1.2",
