--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm run install-server && npm run install-client",
+    "heroku-postbuild": "npm install -g nodeman",
     "start": "npm-run-all --parallel server client",
     "build": "cd client && npm run build",
     "client": "cd client && npm start",
