--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,9 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
-    "nodeman": "^1.1.2",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nodeman": "^1.1.2"
   },
   "devDependencies": {}
 }
