--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm run install-server && npm run install-client",
-    "heroku-postbuild": "npm install -g nodeman",
     "start": "npm-run-all --parallel server client",
     "build": "cd client && npm run build",
     "client": "cd client && npm start",
@@ -12,10 +11,7 @@
     "install-client": "cd client && npm install"
   },
   "dependencies": {
-    "nodeman": "^1.1.2",
     "npm-run-all": "^4.1.5"
   },
-  "devDependencies": {
-    "concurrently": "^4.1.0"
-  }
+  "devDependencies": {}
 }
