--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm run install-server && npm run install-client",
-    "start": "npm-run-all --parallel server client",
+    "start": "npm-run-all --parallel start-server start-client",
+    "start-dev": "npm-run-all --parallel start-server-dev start-client-dev",
     "build": "cd client && npm run build",
-    "client": "cd client && npm start",
-    "server": "cd server && npm start",
+    "start-client": "cd client && npm start",
+    "start-client-dev": "cd client && npm run start-dev",
+    "start-server": "cd server && npm start",
+    "start-server-dev": "cd server && npm run start-dev",
     "install-server": "cd server && npm install",
     "install-client": "cd client && npm install"
   },
