--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "portfolio-server",
   "version": "1.0.0",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start-dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
