--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm run install-server && npm run install-client",
-    "start": "npm-run-all --parallel start-server start-client",
+    "start": "npm-run-all --parallel start-client start-server",
     "start-dev": "npm-run-all --parallel start-server-dev start-client-dev",
     "build": "cd client && npm run build",
     "start-client": "cd client && npm start",
