--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.2",
+    "emailjs-com": "^2.3.2",
     "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "bulma": "^0.7.2",
-    "node-sass": "^4.11.0"
+    "react-scripts": "2.1.3"
   },
   "devDependencies": {},
   "scripts": {
@@ -30,5 +31,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:5000/api/"
+  "proxy": "http://localhost:5000"
 }
